# repro-leptos-stable-struct

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  index.html  rust-toolchain.toml
.github/workflows/: ci.yml
.zed/: settings.json
src/: lib.rs  main.rs
src/pages/: home.rs
