[package]
name = "repro"
version = "0.1.0"
edition = "2024"
authors = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-struct-table = { version= "0.15" , features = ["chrono", "uuid", "time"] }
leptos_router = "0.8"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

[dev-dependencies]
# needs to be in sync with `wasm-bindgen` installed via the flake's devShell
wasm-bindgen = "=0.2.104"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["DomRect", "Document", "Window"] }
